# anima

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  config.example.yaml  config.yaml  pyproject.toml  setup.py
anima/: __main__.py  config.py  data.py  main.py  map.py  naming.py  pathfinding.py  persona.py  uop.py  world_knowledge.py
anima/action/: interaction.py  movement.py  speech.py
anima/brain/: behavior_tree.py  brain.py  llm.py  prompt.py  think.py
anima/client/: appearance.py  codec.py  connection.py  handler.py  packets.py
anima/core/: __init__.py  avatar.py  bus.py  goals.py  publish.py  subscriber.py
anima/memory/: __init__.py  database.py  journal.py  learning.py  retrieval.py  rewards.py
anima/monitor/: analyzer.py  feed.py  metrics.py  tui.py  (+2 more)
data/: events.jsonl  tiledata_items.json  tiledata_land.json  world_knowledge.yaml
docs/: architecture-refactor-plan.md  classicuo-analysis.md  development-plan-20260321.md  implementation-plan.md  reinforcement-learning.md  self-improvement-plan.md  skill-system.md  uor-skills-reference.md  woodcutter-workflow.md
personas/: adventurer.yaml  bard.yaml  blacksmith.yaml  mage.yaml  merchant.yaml  miner.yaml  ranger.yaml  woodcutter.yaml
tests/: test_behavior_tree.py  test_bus.py  test_codec.py  test_forum.py  test_goals.py  test_gump.py  test_handlers.py  test_journal.py  test_learning.py  test_memory.py  test_naming.py  test_pathfinding.py  test_perception.py  test_skills.py
tools/: extract_uo_data.py  map_query.py  self_improve.py  supervisor.py  tui.py  tui_monitor.py  walk_test.py  web_monitor.py
(+109 files in other folders)
