[project]
name = "anima"
version = "0.1.0"
description = "AI player system for Ultima Online"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
llm = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "numpy>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
